--- a/README
+++ b/README
@@ -18,4 +18,27 @@ GOALS:
 3. Let other people participate in its creation
 4. Make something about the things I love about Philadelphia
 
+LINKS:
+You can get PLT Racket here:
+	http://racket-lang.org/
+
+It's very thorough, if somewhat obtuse, documentation starts here:
+	http://docs.racket-lang.org/
+
+If you're new to programming, you probably want to start here:
+	http://docs.racket-lang.org/quick/index.html
+
+But otherwise, if you're a long-time programmer who is just new
+to Racket, you would probably prefer to start here:
+	http://docs.racket-lang.org/guide/index.html
+
+I'm not going to link you to any particular MUDs. The ones 
+I used to play are no longer running, and the ones that are
+still running are not very accessible. 
+
+However, I would suggest playing the original Zork:
+	http://pot.home.xs4all.nl/infocom/zork1.html
+
+Imagine "now add other people" and that should give you an 
+idea of how these sorts of games go.
 
